# vidyawave-the-fighter

./: .gitignore  CMakeLists.txt  README.md  _clang-format
docs/: Doxyfile.in
include/: canvas.hpp
include/animations/: animation.hpp  h_animation.hpp
include/networking/: match_packet.hpp
include/players/: billy.hpp  bonk.hpp  john_debug.hpp  josh.hpp  player.hpp
include/players/states/: move.hpp  state.hpp
include/scenes/: canvas.hpp  character_select_scene.hpp  game_scene.hpp  main_menu_scene.hpp  online_game_scene.hpp  scene.hpp  scene_container.hpp
include/tools/: animation.hpp  hit_animation.hpp  input_queue.hpp  move.hpp  sdl_image_tools.hpp
res/: atlas_generator.py  hitbox_calculator.py
res/anim/debug/animations/: crouch_idle.kra  neutral_idle.kra  neutral_to_crouch.kra  walk_backwards.kra  walk_forwards.kra
res/characters/: atlas_generator.py  generate_atlas.cmd  generate_hitboxes.cmd  hitbox_calculator.py  missing_texture.atlas
res/characters/billy/animations/: block_neutral.atlas
res/characters/billy/animations/frames/air/: hurtbox
res/characters/billy/animations/frames/air_to_neutral/: hurtbox
res/characters/billy/animations/frames/backdash/: hurtbox
res/characters/billy/animations/frames/block_air/: hurtbox
res/characters/billy/animations/frames/block_crouch/: hurtbox
res/characters/billy/animations/frames/block_neutral/: hurtbox
res/characters/billy/animations/frames/crouch/: hurtbox
res/characters/billy/animations/frames/crouch_to_neutral/: hurtbox
res/characters/billy/animations/frames/grabbed/: hurtbox
res/characters/billy/animations/frames/knocked_down/: hurtbox
res/characters/billy/animations/frames/neutral/: hurtbox
res/characters/billy/animations/frames/neutral_to_air/: hurtbox
res/characters/billy/animations/frames/neutral_to_backward_air/: hurtbox
res/characters/billy/animations/frames/neutral_to_crouch/: hurtbox
res/characters/billy/animations/frames/neutral_to_forward_air/: hurtbox
res/characters/billy/animations/frames/sprint/: hurtbox
res/characters/billy/animations/frames/stun/: hurtbox
res/characters/billy/animations/frames/walk_backward/: hurtbox
res/characters/billy/animations/frames/walk_forward/: hurtbox
res/characters/john_debug/animations/: a.atlas  a.hitboxes  a.hurtboxes  air.atlas  air_to_neutral.atlas  air_to_neutral.hurtboxes  airborne.atlas  airborne.hurtboxes  b.atlas  b.hitboxes  b.hurtboxes  backdash.atlas  backdash.hurtboxes  block_air.atlas  block_air.hurtboxes  block_crouch.atlas  block_crouch.hurtboxes  block_neutral.atlas  block_neutral.hurtboxes  c.atlas  c.hitboxes  c.hurtboxes  c_grab.atlas  c_grab.hitboxes  crouch.atlas  crouch_to_neutral.atlas  crouch_to_neutral.hurtboxes  crouching.atlas  crouching.hurtboxes  d.atlas  d.hitboxes  d.hurtboxes  grabbed.atlas  grabbed.hurtboxes  knocked_down.atlas  knocked_down.hurtboxes  neutral.atlas  neutral.hurtboxes  neutral_to_air.atlas  neutral_to_air.hurtboxes  (+19 more)
res/characters/john_debug/animations/frames/a/: hitbox  hurtbox
res/characters/john_debug/animations/frames/air/: hurtbox
res/characters/john_debug/animations/frames/air_to_neutral/: hurtbox
res/characters/john_debug/animations/frames/b/: hitbox  hurtbox
res/characters/john_debug/animations/frames/backdash/: hurtbox
res/characters/john_debug/animations/frames/block_air/: hurtbox
res/characters/john_debug/animations/frames/block_crouch/: hurtbox
res/characters/john_debug/animations/frames/block_neutral/: hurtbox
res/characters/john_debug/animations/frames/c/: hitbox  hurtbox
res/characters/john_debug/animations/frames/c_grab/: hitbox  hurtbox
res/characters/john_debug/animations/frames/crouch/: hurtbox
res/characters/john_debug/animations/frames/crouch_to_neutral/: hurtbox
res/characters/john_debug/animations/frames/d/: hitbox  hurtbox
res/characters/john_debug/animations/frames/grabbed/: hurtbox
res/characters/john_debug/animations/frames/knocked_down/: hurtbox
res/characters/john_debug/animations/frames/neutral/: hurtbox
res/characters/john_debug/animations/frames/neutral_to_air/: hurtbox
res/characters/john_debug/animations/frames/neutral_to_backward_air/: hurtbox
res/characters/john_debug/animations/frames/neutral_to_crouch/: hurtbox
res/characters/john_debug/animations/frames/sprint/: hurtbox
res/characters/john_debug/animations/kra/: a.kra  airborne.kra  b.kra  backdash.kra  c.kra  c_grab.kra  crouching.kra  d.kra  neutral.kra  neutral_to_air.kra  neutral_to_crouch.kra  sprint.kra
res/config/debug/: hiurtboxes.json
scripts/: atlas_generator.py  draw_hitboxes.py  hitbox_calculator.py  hitbox_generator.py
scripts/temp/animations/: air.atlas  air.hurtboxes  air_to_neutral.atlas  air_to_neutral.hurtboxes  backdash.hurtboxes  block_air.atlas  block_air.hurtboxes  block_crouch.atlas  block_crouch.hurtboxes  block_neutral.atlas  block_neutral.hurtboxes  crouch.atlas  crouch.hurtboxes  crouch_to_neutral.atlas  crouch_to_neutral.hurtboxes  grabbed.atlas  grabbed.hurtboxes  knocked_down.atlas  knocked_down.hurtboxes  neutral.atlas  neutral.hurtboxes  neutral_to_air.atlas  neutral_to_air.hurtboxes  neutral_to_backward_air.atlas  neutral_to_backward_air.hurtboxes  neutral_to_crouch.atlas  neutral_to_crouch.hurtboxes  neutral_to_forward_air.atlas  neutral_to_forward_air.hurtboxes  sprint.hurtboxes  stun.atlas  stun.hurtboxes  walk_backward.atlas  walk_backward.hurtboxes  walk_forward.atlas  walk_forward.hurtboxes
scripts/temp/animations/files/blender/: model.blend  model.blend1  model_default.blend
src/: CMakeLists.txt  canvas.cpp  main.cpp
src/animations/: CMakeLists.txt  animation.cpp  h_animation.cpp
src/networking/: server_main.cpp
src/players/: CMakeLists.txt  billy.cpp  bonk.cpp  john_debug.cpp  josh.cpp  player.cpp
src/players/states/: CMakeLists.txt  move.cpp  state.cpp
src/scenes/: CMakeLists.txt  canvas.cpp  character_select_scene.cpp  game_scene.cpp  main_menu_scene.cpp  online_game_scene.cpp  scene.cpp  scene_container.cpp
src/tools/: CMakeLists.txt  animation.cpp  hit_animation.cpp  sdl_image_tools.cpp
(+4 files in other folders)
